cross-version/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cross-version-v2
  namespace: crossversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=$(MY_ENV_VAR)"
          ports:
            - containerPort: 5678
