cross-version/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cross-version
  namespace: crossversion
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 5678
