cross-version/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crossversion-app
  namespace: crossversion
spec:
  host: cross-version
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
